# cadavre_exquis

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.kv  main.py  pyproject.toml  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
app/components/: widgets.kv
app/components/bioview/: bioview.kv  bioview.py
app/components/finishmodal/: finishmodal.kv  finishmodal.py
app/components/galleryimage/: galleryimage.kv  galleryimage.py
app/components/poettoggle/: poettoggle.kv  poettogle.py
app/components/wordlabel/: wordlabel.kv  wordlabel.py
app/views/aboutscreen/: aboutscreen.kv  aboutscreen.py
app/views/bioscreen/: bioscreen.kv  bioscreen.py
app/views/demoscreen/: demoscreen.kv  demoscreen.py
app/views/galleryscreen/: galleryscreen.kv  galleryscreen.py
app/views/gamescreen/: gamescreen.kv  gamescreen.py
app/views/homescreen/: homescreen.kv  homescreen.py
app/views/menuscreen/: menuscreen.kv  menuscreen.py
assets/data/: .clean_data.csv.icloud
assets/video/: .cadavre_exquis_demo.mp4.icloud  .cadavre_exquis_demo_full.mov.icloud
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: __init__.py  data_cleaning.py  data_structures.py  loading_data.py
tests/: test_main.py
